# timestamped-token-reward-system

./: .dockerignore  .env.example  .env.railway  .eslintrc.js  .gitignore  Anchor.toml  BUILD_FIXES_SUMMARY.md  DEMO_SCRIPT.md  DEPLOYMENT_OPTIONS.md  DEVOPS_STRATEGY.md  DOCKER.md  Dockerfile  ERROR_FIXES_SUMMARY.md  NETLIFY_BUILD_FIX.md  NETLIFY_DEPLOYMENT_GUIDE.md  NETLIFY_MCP_COMMANDS.md  RAILWAY_CORS_FIX.md  RAILWAY_DEPLOYMENT.md  RAILWAY_DEPLOYMENT_INSTRUCTIONS.md  README.md  SUPABASE_SETUP.md  TECHNICAL_INTERVIEW_GUIDE.md  TECHNICAL_SHOWCASE.md  build-netlify.sh  database-schema.sql  debug-db-health.js  debug-health-check.js  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  netlify.toml  nixpacks.toml  package-lock.json  package.json  setup-database.js  system-integration-test.js  test-supabase-connection.js  test-supabase.js  tsconfig.json  (+1 more)
.bmad-core/: install-manifest.yaml
.bmad-creative-writing/: install-manifest.yaml
.bmad-infrastructure-devops/: install-manifest.yaml
.github/: DEPLOYMENT_GUIDE.md  ROLLBACK_MONITORING.md  TESTING_STRATEGY.md
.github/workflows/: cd.yml  ci.yml  rollback.yml  security-scan.yml
.qwen/bmad-method/: QWEN.md
.trae/rules/: bmad-master.md
apps/api/: .dockerignore  .env.example  .eslintrc.cjs  Dockerfile  jest.config.js  package.json  railway.toml  (+2 more)
docs/: ERROR_HANDLING.md
nginx/: nginx.conf
programs/reward-system/: Cargo.toml
programs/reward-system/src/: lib.rs
scripts/: deploy.sh  development.sh  init-db.sql  quick-start.sh  railway-setup.sql
supabase/: schema.sql
(+87 files in other folders)
